# CProjectTemplate

./: CMakeLists.txt
include/: logger.h
src/common/: logger.cpp
src/windows/: main.cpp
